# shu-plugin-sdk

./: LICENSE.COMMERCIAL.md  LICENSE.md  README.md  pyproject.toml
_cookiecutter/: conftest.py  manifest.py  plugin.py  test_plugin.py
shu_plugin_sdk/: __init__.py  contracts.py  result.py  retry.py  template_cli.py  testing.py
tests/: test_contracts.py  test_cookiecutter.py  test_result.py  test_retry.py  test_template_cli.py  test_testing.py
